# tg-collector

./: .env.example  .gitignore  .secrets.baseline  README.md  SECURITY.md  main.py  mypy.ini  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
deploy/: .env.template  Dockerfile  apache2-archive.conf  docker-compose.yml  nginx-archive.conf
deploy/systemd/: archive-drop.service
scripts/: manual_test.py
specs/001-archive-drop/: plan.md  spec.md  tasks.md
src/: config.py
src/cli/: bot.py
src/observability/: __init__.py  logging.py
src/services/: __init__.py  storage.py
tests/: test_web_interface.py
tests/integration/: test_bot_integration.py  test_end_to_end.py  test_rate_limit.py  test_storage_audio.py  test_storage_text.py
tests/unit/: test_bot.py  test_naming.py  test_validation.py
web/: .env.example  Dockerfile  README.md  app.py  app_clean.py
web/templates/: index.html  index_backup.html  login.html
